/*!
 *
 * Copyrights to StackInsights
 * All rights are reserved 2019
 *
 */

syntax = "proto3";

package stackinsights.v3;

option java_multiple_files = true;
option java_package = "org.apache.stackinsights.apm.network.common.v3";
option csharp_namespace = "StackInsights.NetworkProtocol.V3";
option go_package = "stackinsights.apache.org/repo/goapi/collect/common/v3";

message KeyStringValuePair {
    string key = 1;
    string value = 2;
}

message CPU {
    double usagePercent = 2;
}

// In most cases, detect point should be `server` or `client`.
// Even in service mesh, this means `server`/`client` side sidecar
// `proxy` is reserved only.
enum DetectPoint {
    client = 0;
    server = 1;
    proxy = 2;
}

message Commands {
    repeated Command commands = 1;
}

message Command {
    string command = 1;
    repeated KeyStringValuePair args = 2;
}

