/*!
 *
 * Copyrights to StackInsights
 * All rights are reserved 2019
 *
 */

syntax = "proto3";

package stackinsights.v3;

option java_multiple_files = true;
option java_package = "org.apache.stackinsights.apm.network.language.agent.v3";
option csharp_namespace = "StackInsights.NetworkProtocol.V3";
option go_package = "stackinsights.apache.org/repo/goapi/collect/language/agent/v3";

import "common/Common.proto";

service CLRMetricReportService {
    rpc collect (CLRMetricCollection) returns (Commands) {
    }
}

message CLRMetricCollection {
    repeated CLRMetric metrics = 1;
    string service = 2;
    string serviceInstance = 3;
}

message CLRMetric {
    int64 time = 1;
    CPU cpu = 2;
    ClrGC gc = 3;
    ClrThread thread = 4;
}

message ClrGC {
    int64 Gen0CollectCount = 1;
    int64 Gen1CollectCount = 2;
    int64 Gen2CollectCount = 3;
    int64 HeapMemory = 4;
}

message ClrThread {
    int32 AvailableCompletionPortThreads = 1;
    int32 AvailableWorkerThreads = 2;
    int32 MaxCompletionPortThreads = 3;
    int32 MaxWorkerThreads = 4;
}
